--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" href="img/favIcon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/src/img/favicon.png">
     <title>Document</title>
 
     <link href="/src/input.css" rel="stylesheet">
